# bevy_shader_playground

./: Cargo.toml
assets/shaders/: custom_shader.wgsl
src/: main.rs
