[package]
name = "bevy_shader_playground"
version = "0.1.0"
edition = "2021"
description = "Basic playground to play with WGSL fragment shaders, based on Bevy"
authors = ["antoine.busch@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.3"
